fixed client domin for cors

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+
+# Client URL
+FRONTEND_URL=http://localhost:3000
