fixed env-example, add seed script and refactored files naming

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check **/*.js",
     "prettier:fix": "prettier --write **/*.js",
+    "seed:admin": "node scripts/seed-admin.js",
     "prepare": "husky"
   },
   "keywords": [],
