--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --check **/*.js",
     "prettier:fix": "prettier --write **/*.js",
     "seed:admin": "node scripts/seed-admin.js",
+    "generate": "plop",
     "prepare": "husky"
   },
   "keywords": [],
@@ -51,7 +52,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^11.0.0",
     "nodemon": "^3.1.10",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "plop": "^4.0.1"
   },
   "lint-staged": {
     "*.js": "eslint"
