--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
-    "dev": "nodemon src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check **/*.js",
@@ -22,7 +22,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -52,8 +52,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^11.0.0",
     "nodemon": "^3.1.10",
-    "prettier": "^2.0.5",
-    "plop": "^4.0.1"
+    "plop": "^4.0.1",
+    "prettier": "^2.0.5"
   },
   "lint-staged": {
     "*.js": "eslint"
